--- a/html.html
+++ b/html.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <script src="./html.js"></script>
+  <script src="./vue.js"></script>
   <script>
     var page = '';
     for (var i = 0; i < arr.length; i++) {
